# mirage

./: Cargo.toml  DEVELOPMENT.md  README.md  USAGE.md
client/: Cargo.toml
client/src/: app.rs  args.rs  backend.rs  config.rs  main.rs  resume.rs  skills.rs  streaming.rs  transcript.rs  tui.rs
client/src/app/: commands.rs  events.rs  helpers.rs  input.rs  mod.rs  state.rs  tests.rs
client/src/tools/: bash_tool.rs  cursor_session.rs  file_tools.rs  mod.rs  prompt_cursor_tool.rs  subagent_tool.rs
core/: Cargo.toml
core/src/: debug_stream.rs  lib.rs  personality.rs  prompts.rs  session.rs  skills.rs  venice.rs
core/src/tools/: bash_tool.rs  cursor_session.rs  file_tools.rs  mod.rs  playwright_driver_assets.rs  playwright_tool.rs  prompt_cursor_tool.rs  subagent_tool.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
service/: Cargo.toml
service/src/: api.rs  lib.rs
