[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
arboard = "3.6.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
mirage-core = { version = "0.1.0", path = "../core" }
mirage-service = { version = "0.1.0", path = "../service" }
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
uuid = { version = "1.23.0", features = ["v4"] }
