[package]
name = "mirage-core"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
rig = { package = "rig-core", version = "0.34.0" }
rig-core = { version = "0.34.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["io-util", "process", "rt", "sync"] }

[dev-dependencies]
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
