[package]
name = "mirage-server"
version.workspace = true
edition.workspace = true

[dependencies]
async-stream = "0.3.6"
axum = "0.8.8"
futures-util = "0.3.32"
mirage-core = { version = "0.1.0", path = "../core" }
mirage-service = { version = "0.1.0", path = "../service" }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time", "net"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
